--- a/Appsisteme/Base.lproj/Main.storyboard
+++ b/Appsisteme/Base.lproj/Main.storyboard
@@ -5,20 +5,20 @@
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="10085"/>
     </dependencies>
     <scenes>
-        <!--Root View Controller-->
+        <!--Mis Contactos-->
         <scene sceneID="Wwm-eL-iyi">
             <objects>
                 <tableViewController storyboardIdentifier="contactsVCidentifier" id="ejX-wX-S9E" customClass="ContactsViewController" sceneMemberID="viewController">
-                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="34" sectionHeaderHeight="28" sectionFooterHeight="28" id="alR-6d-lKT">
+                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="57" sectionHeaderHeight="28" sectionFooterHeight="28" id="alR-6d-lKT">
                         <rect key="frame" x="0.0" y="0.0" width="320" height="480"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <prototypes>
-                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="cells" rowHeight="34" id="OWk-1h-qmM">
-                                <rect key="frame" x="0.0" y="92" width="320" height="34"/>
+                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="cells" rowHeight="57" id="OWk-1h-qmM">
+                                <rect key="frame" x="0.0" y="92" width="320" height="57"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="OWk-1h-qmM" id="agT-xP-AeQ">
-                                    <rect key="frame" x="0.0" y="0.0" width="320" height="33"/>
+                                    <rect key="frame" x="0.0" y="0.0" width="320" height="56"/>
                                     <autoresizingMask key="autoresizingMask"/>
                                 </tableViewCellContentView>
                             </tableViewCell>
@@ -29,7 +29,7 @@
                         </connections>
                     </tableView>
                     <toolbarItems/>
-                    <navigationItem key="navigationItem" title="Root View Controller" id="Dn3-ki-U8H">
+                    <navigationItem key="navigationItem" title="Mis Contactos" id="Dn3-ki-U8H">
                         <barButtonItem key="rightBarButtonItem" title="+" id="cQ2-g0-0Db">
                             <connections>
                                 <segue destination="85C-7s-5E4" kind="push" identifier="add" id="Pzb-SX-gxu"/>
@@ -38,8 +38,9 @@
                     </navigationItem>
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="gAC-BC-k9Z" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                <exit id="2rj-3u-fxg" userLabel="Exit" sceneMemberID="exit"/>
             </objects>
-            <point key="canvasLocation" x="231" y="184"/>
+            <point key="canvasLocation" x="270" y="184"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="rbC-OK-dJg">
@@ -66,7 +67,7 @@
             </objects>
             <point key="canvasLocation" x="-138.66666666666666" y="184.59999999999999"/>
         </scene>
-        <!--New Contact View Controller-->
+        <!--Nuevo Contacto-->
         <scene sceneID="mRh-lg-0fy">
             <objects>
                 <viewController id="85C-7s-5E4" customClass="NewContactViewController" sceneMemberID="viewController">
@@ -88,6 +89,7 @@
                                 <state key="normal" title="Aceptar"/>
                                 <connections>
                                     <action selector="aceptContact:" destination="85C-7s-5E4" eventType="touchUpInside" id="Zbp-zf-SAj"/>
+                                    <segue destination="2rj-3u-fxg" kind="unwind" unwindAction="unwindToContactsView:" id="KuE-hJ-qPg"/>
                                 </connections>
                             </button>
                             <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Nombre" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="usp-MX-81y">
@@ -100,12 +102,13 @@
                                 <state key="normal" title="Cancelar"/>
                                 <connections>
                                     <action selector="cancelContact:" destination="85C-7s-5E4" eventType="touchUpInside" id="TtU-o9-0zT"/>
+                                    <segue destination="2rj-3u-fxg" kind="unwind" unwindAction="unwindToContactsView:" id="eHC-XL-nie"/>
                                 </connections>
                             </button>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                     </view>
-                    <navigationItem key="navigationItem" id="405-aW-hr3"/>
+                    <navigationItem key="navigationItem" title="Nuevo Contacto" id="405-aW-hr3"/>
                     <simulatedScreenMetrics key="simulatedDestinationMetrics"/>
                     <connections>
                         <outlet property="contactName" destination="usp-MX-81y" id="LVt-bH-eAy"/>
@@ -114,7 +117,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="4fS-ed-Qgg" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-116" y="746"/>
+            <point key="canvasLocation" x="671" y="184"/>
         </scene>
     </scenes>
 </document>
