--- a/Appsisteme/Base.lproj/LaunchScreen.storyboard
+++ b/Appsisteme/Base.lproj/LaunchScreen.storyboard
@@ -3,6 +3,7 @@
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="10085"/>
+        <capability name="Aspect ratio constraints" minToolsVersion="5.1"/>
     </dependencies>
     <scenes>
         <!--View Controller-->
@@ -14,14 +15,31 @@
                         <viewControllerLayoutGuide type="bottom" id="xb3-aO-Qok"/>
                     </layoutGuides>
                     <view key="view" contentMode="scaleToFill" id="Ze5-6b-2t3">
-                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="480"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="logo" translatesAutoresizingMaskIntoConstraints="NO" id="ZTu-Qd-QD8">
+                                <rect key="frame" x="35" y="172" width="250" height="135"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" secondItem="ZTu-Qd-QD8" secondAttribute="height" multiplier="154:83" id="I0N-kd-qyF"/>
+                                    <constraint firstAttribute="width" constant="250" id="kzM-Gk-7yE"/>
+                                </constraints>
+                            </imageView>
+                        </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="ZTu-Qd-QD8" firstAttribute="centerY" secondItem="Ze5-6b-2t3" secondAttribute="centerY" id="nDD-f3-t55"/>
+                            <constraint firstItem="ZTu-Qd-QD8" firstAttribute="centerX" secondItem="Ze5-6b-2t3" secondAttribute="centerX" id="sWj-oE-rdD"/>
+                        </constraints>
                     </view>
+                    <simulatedScreenMetrics key="simulatedDestinationMetrics"/>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="iYj-Kq-Ea1" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="53" y="375"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="logo" width="461" height="249"/>
+    </resources>
 </document>
